--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,34 @@
-.streamlit/secrets.toml
+# --- SYSTEM FILES ---
+.DS_Store
+Thumbs.db
+
+# --- PYTHON (Admin Panel) ---
 __pycache__/
 *.pyc
+*.pyo
+*.pyd
+.venv
+env/
+venv/
+# Ignore secrets in the admin panel
+admin_panel/.streamlit/secrets.toml
+.streamlit/secrets.toml
+
+# --- NODE.JS (Student App) ---
+# CRITICAL: Never upload node_modules (it is too heavy)
+node_modules/
+
+# Ignore build outputs
+dist/
+dist-ssr/
+
+# --- SECURITY (Secrets) ---
+# CRITICAL: Never upload your database keys
+.env
+.env.local
+.env.*.local
+
+# --- LOGS ---
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
